--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 .Rproj.user
 scripts/models/
 scripts/data.tsv
+scripts/consonant_lengthening_paper/scripts/groundhog_libraries_2023-07-17/
+doreco/
+clts/
