--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 *Rproj
 *.DS_Store
 .Rproj.user
-scripts/models/
+scripts/models/*.rds
 scripts/data.tsv
 scripts/R_groundhog/
 scripts/groundhog_libraries_2023-07-17/
